[gd_scene load_steps=9 format=3 uid="uid://cycpl7j1cx6wl"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_jh42p"]
[ext_resource type="PackedScene" uid="uid://dira6n1ckdnxh" path="res://scenes/ui/button_sound.tscn" id="2_8gff6"]
[ext_resource type="PackedScene" uid="uid://ccc3qvo8ro54y" path="res://scenes/ui/settings_screen.tscn" id="3_h36ae"]
[ext_resource type="PackedScene" uid="uid://b55b5sey047pw" path="res://scenes/ui/credits_screen.tscn" id="4_ejicy"]

[sub_resource type="Animation" id="Animation_fujmi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenuScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainMenuScreen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SettingsScreen:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1280, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CreditsScreen:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1280, 2.08165e-12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CreditsScreen:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1280, 720)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SettingsScreen:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1280, 720)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MainMenuScreen:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1280, 720)]
}

[sub_resource type="Animation" id="Animation_hj80j"]
resource_name = "transition_credits"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CreditsScreen:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(-1280, 2.08165e-12), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainMenuScreen:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(640, 2.08165e-12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainMenuScreen:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_x36fs"]
resource_name = "transition_settings"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsScreen:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(1280, 2.08165e-12), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainMenuScreen:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-640, 2.08165e-12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainMenuScreen:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mlhel"]
_data = {
"RESET": SubResource("Animation_fujmi"),
"transition_credits": SubResource("Animation_hj80j"),
"transition_settings": SubResource("Animation_x36fs")
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_jh42p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mlhel")
}

[node name="MainMenuScreen" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuScreen"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StartButton" parent="MainMenuScreen/VBoxContainer" instance=ExtResource("2_8gff6")]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="SettingsButton" parent="MainMenuScreen/VBoxContainer" instance=ExtResource("2_8gff6")]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="CreditsButton" parent="MainMenuScreen/VBoxContainer" instance=ExtResource("2_8gff6")]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"

[node name="QuitButton" parent="MainMenuScreen/VBoxContainer" instance=ExtResource("2_8gff6")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="SettingsScreen" parent="." instance=ExtResource("3_h36ae")]
unique_name_in_owner = true
offset_left = 1280.0
offset_right = 1280.0
size_flags_horizontal = 8

[node name="CreditsScreen" parent="." instance=ExtResource("4_ejicy")]
unique_name_in_owner = true
offset_left = -1280.0
offset_right = -1280.0
